--- a/views/task/index.ejs
+++ b/views/task/index.ejs
@@ -8,6 +8,7 @@
 <body>
     <h3>Create New Task</h3>
     <form action="/task/new" method="post">
+        <input type="hidden" name="id" value="<%= locals.id %>">
         <input type="hidden" name="taname" value="<%= locals.taname %>">
         <table>
             <tr>
@@ -60,10 +61,17 @@
                         <td><%= t.taappnum %></td>
                         <td><%= t.tafamrep %></td>
                         <td><%= t.taremark %></td>
-                        <td><button>Edit</button></td>
                         <td>
-                            <form method="POST" action="/task/delete/<%= t._id %>?_method=DELETE">
-                                <button type="submit" onclick="return confirm('Are you sure?')">Delete</button>
+                            <a href="/task?id=<%= t._id %>">Edit</a>
+                            <form action="/task?id=<%= t._id %>" method="GET">
+                                <input type="hidden" name="id" value="<%= t._id %>">
+                                <button type="submit" >Edit</button>
+                            </form>
+                        </td>
+                        <td>
+                            <form action="/task/delete/<%= t._id %>?_method=DELETE" method="POST">
+                                <button type="submit" onclick="return confirm('Are you sure?')">Delete
+                                </button>
                             </form>
                         </td>
                     </tr>
