--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -6,6 +6,7 @@
     <title>Login</title>
 </head>
 <body>
+    <h3>Login</h3>
     <form action="/user/login" method="post">
         <p>
             <label for="username"><b>Username</b></label>
