--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -18,8 +18,9 @@
                 <td><input type="password" name="password" value="<%= locals.password %>" placeholder="輸入用戶密碼" required></td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
+                <td colspan="2">
+                     沒有戶口? 請先 <a href="/user/signup">登記</a>
+                </td>                
             </tr>
             <tr>
                 <td colspan="2">
