minor signup fix

--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -19,7 +19,7 @@
             </tr>
             <tr>
                 <th><label for="password2">確認密碼: </label></th>
-                <td><input type="password" name="password2" value="<%= locals.password %>" placeholder="輸入確認密碼" required></td>
+                <td><input type="password" name="password2" value="<%= locals.password2 %>" placeholder="輸入確認密碼" required></td>
             </tr>
 
             <tr>
