--- a/views/task/header.ejs
+++ b/views/task/header.ejs
@@ -1,4 +1,4 @@
 <h3>
-    Hello, <%= locals.taname.charAt(0).toUpperCase() + locals.taname.slice(1)%>    
+    Hi, <%= locals.taname.charAt(0).toUpperCase() + locals.taname.slice(1)%>    
 </h3>
     <a href="/user/logout" onclick="return confirm('Are you sure?')">登出</a>
