--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登記</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <h3>登記</h3>
