--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -4,45 +4,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登記</title>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <h3>登記</h3>
-    <form action="/user/signup" method="post">
-        <table>
-            <tr>
-                <th><label for="username">用戶名稱: </label></th>
-                <td><input type="text" name="username" id="username" value="<%= locals.username %>" placeholder="輸入用戶名稱" required></td>
-            </tr>
-            <tr>
-                <th><label for="password">用戶密碼: </label></th>
-                <td><input type="password" name="password" value="<%= locals.password %>" placeholder="輸入用戶密碼" required></td>
-            </tr>
-            <tr>
-                <th><label for="password2">確認密碼: </label></th>
-                <td><input type="password" name="password2" value="<%= locals.password2 %>" placeholder="輸入確認密碼" required></td>
-            </tr>
+    <div class="container">
+        <h3>登記</h3>
+        <form action="/user/signup" method="post">
+            <table>
+                <tr>
+                    <th><label for="username">用戶名稱: </label></th>
+                    <td><input type="text" name="username" id="username" value="<%= locals.username %>" placeholder="輸入用戶名稱" required></td>
+                </tr>
+                <tr>
+                    <th><label for="password">用戶密碼: </label></th>
+                    <td><input type="password" name="password" value="<%= locals.password %>" placeholder="輸入用戶密碼" required></td>
+                </tr>
+                <tr>
+                    <th><label for="password2">確認密碼: </label></th>
+                    <td><input type="password" name="password2" value="<%= locals.password2 %>" placeholder="輸入確認密碼" required></td>
+                </tr>
+    
+                <tr>
+                    <th><label for="tunamec">中文姓名: </label></th>
+                    <td><input type="text" name="tunamec" value="<%= locals.tunamec %>" placeholder="輸入中文名稱"></td>
+                </tr>
+                <tr>
+                    <th><label for="tunamep">葡文姓名: </label></th>
+                    <td><input type="text" name="tunamep" value="<%= locals.tunamep %>" placeholder="輸入葡文名稱"></td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <button type="submit">Go</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <%= locals.message %>
+                    </td>
+                </tr>
+            </table>
+        </form>
 
-            <tr>
-                <th><label for="tunamec">中文姓名: </label></th>
-                <td><input type="text" name="tunamec" value="<%= locals.tunamec %>" placeholder="輸入中文名稱"></td>
-            </tr>
-            <tr>
-                <th><label for="tunamep">葡文姓名: </label></th>
-                <td><input type="text" name="tunamep" value="<%= locals.tunamep %>" placeholder="輸入葡文名稱"></td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <button type="submit">Go</button>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <%= locals.message %>
-                </td>
-            </tr>
-        </table>
-    </form>
+        <%- include('../partials/footer.ejs'); %>
+    </div>
+
     <script>
         document.getElementById("username").focus();
     </script>
