--- a/views/task/index.ejs
+++ b/views/task/index.ejs
@@ -4,54 +4,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>工作管理</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles.css">
 </head>
-<body>
-    <%- include('header.ejs'); %>
+<body>   
+    <div class="container container-md">
+        <%- include('../partials/header.ejs'); %>
 
-    <%- include('create_edit.ejs'); %>
-    <hr>
-    <h3><a href="/task">所有工作</a></h3>
-    <% if (locals.tasks.length > 0 ) { %>  
-        <table border="1">
-            <thead>
-                <tr>
-                    <th>工作類型</th>
-                    <th>工作日期</th>
-                    <th>申請表編號</th>
-                    <th>家團代表</th>
-                    <th>工作備註</th>
-                    <th></th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tdody><% locals.tasks.forEach( t => { %>
+        <%- include('create_edit.ejs'); %>
+        <hr>
+        <h3><a href="/task">所有工作</a></h3>   
+        
+        <% if (locals.tasks.length > 0 ) { %>  
+            <table class="table table-bordered table-striped table-sm">
+                <thead>
                     <tr>
-                        <td><%= t.tatype %></td>
-                        <td><%= t.tadate %></td>
-                        <td><%= t.taappnum %></td>
-                        <td><%= t.tafamrep %></td>
-                        <td><%= t.taremark %></td>
-                        <td>                            
-                            <form action="/task?id=<%= t._id %>" method="GET">
-                                <input type="hidden" name="id" value="<%= t._id %>">
-                                <button type="submit">Edit</button>
-                            </form>
-                        </td>
-                        <td>
-                            <form action="/task/delete/<%= t._id %>?_method=DELETE" method="POST">
-                                <button type="submit" onclick="return confirm('Are you sure?')">Delete
-                                </button>
-                            </form>
-                        </td>
+                        <th>工作類型</th>
+                        <th>工作日期</th>
+                        <th>申請表編號</th>
+                        <th>家團代表</th>
+                        <th>工作備註</th>
+                        <th></th>
+                        <th></th>
                     </tr>
-                <% }) %>
-            </tdody>
-        </table>
-    <% } else { %> 
-        <p>沒有工作</p>
-    <% } %>
+                </thead>
+                <tbody><% locals.tasks.forEach( t => { %>
+                        <tr>
+                            <td><%= t.tatype %></td>
+                            <td><%= t.tadate %></td>
+                            <td><%= t.taappnum %></td>
+                            <td><%= t.tafamrep %></td>
+                            <td><%= t.taremark %></td>
+                            <td>                            
+                                <form action="/task?id=<%= t._id %>" method="GET">
+                                    <input type="hidden" name="id" value="<%= t._id %>">
+                                    <button type="submit">Edit</button>
+                                </form>
+                            </td>
+                            <td>
+                                <form action="/task/delete/<%= t._id %>?_method=DELETE" method="POST">
+                                    <button type="submit" onclick="return confirm('Are you sure?')">Delete
+                                    </button>
+                                </form>
+                            </td>
+                        </tr>
+                    <% }) %>
+                </tbody>
+            </table>
+        <% } else { %> 
+            <p>沒有工作</p>
+        <% } %>
 
-    <%- include('footer.ejs'); %>
+        <%- include('../partials/footer.ejs'); %>
+    </div>
 </body>
 </html>
