add back button on signup

--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -36,8 +36,11 @@
                     <td><input type="text" name="tunamep" value="<%= locals.tunamep %>" placeholder="輸入葡文名稱"></td>
                 </tr>
                 <tr>
-                    <td colspan="2">
+                    <td>
                         <button type="submit">Go</button>
+                    </td>
+                    <td>
+                        <button onclick="history.back()">Back</button>
                     </td>
                 </tr>
                 <tr>
