add button styling

--- a/views/task/create_edit.ejs
+++ b/views/task/create_edit.ejs
@@ -34,8 +34,8 @@
         </tr>
         <tr>
             <td colspan="2">
-                <button><% if (locals.id) { %>更新<% } else { %>建立<% } %></button>
-                <input type="reset" value="重設" >
+                <button class="btn btn-primary"><% if (locals.id) { %>更新<% } else { %>建立<% } %></button>
+                <input type="reset" value="重設" class="btn btn-secondary">
             </td>
         </tr>
     </table>        
