--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -29,7 +29,7 @@
                 </tr>
                 <tr>
                     <td colspan="2">
-                        <button type="submit">Go</button>
+                        <button type="submit" class="btn btn-primary">Go</button>
                     </td>
                 </tr>
                 <tr>
