--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -37,10 +37,10 @@
                 </tr>
                 <tr>
                     <td>
-                        <button type="submit">Go</button>
+                        <button type="submit" class="btn btn-primary">Go</button>
                     </td>
                     <td>
-                        <button onclick="history.back()">Back</button>
+                        <button onclick="history.back()"  class="btn btn-secondary">Back</button>
                     </td>
                 </tr>
                 <tr>
