more table styling

--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -13,7 +13,7 @@
     <div class="container">
         <h3>登記</h3>
         <form action="/user/signup" method="post">
-            <table>
+            <table class="table table-borderless table-sm">
                 <tr>
                     <th><label for="username"  class="form-label">用戶名稱: </label></th>
                     <td><input type="text" class="form-control" name="username" id="username" value="<%= locals.username %>" placeholder="輸入用戶名稱" required></td>
