--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,6 @@
-<hr />
-<footer>
-    <p>Copyright &copy; 2022</p>    
-</footer>
+<div class="container">
+    <hr />
+    <footer>
+        <p>Copyright &copy; 2022</p>    
+    </footer>
+</div>
