--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -16,11 +16,11 @@
             <table class="table table-borderless table-sm">
                 <tr>
                     <th><label for="username" class="form-label">用戶名稱: </label></th>
-                    <td><input type="text" class="form-control" name="username" id="username" value="<%= locals.username %>" placeholder="輸入用戶名稱" required></td>
+                    <td><input type="text" class="form-control form-control-sm" name="username" id="username" value="<%= locals.username %>" placeholder="輸入用戶名稱" required></td>
                 </tr>
                 <tr>
                     <th><label for="password"  class="form-label">用戶密碼: </label></th>
-                    <td><input type="password"  class="form-control" name="password" value="<%= locals.password %>" placeholder="輸入用戶密碼" required></td>
+                    <td><input type="password"  class="form-control form-control-sm" name="password" value="<%= locals.password %>" placeholder="輸入用戶密碼" required></td>
                 </tr>
                 <tr>
                     <td colspan="2">
