--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -16,24 +16,24 @@
             <table class="table table-borderless table-sm">
                 <tr>
                     <th><label for="username"  class="form-label">用戶名稱: </label></th>
-                    <td><input type="text" class="form-control" name="username" id="username" value="<%= locals.username %>" placeholder="輸入用戶名稱" required></td>
+                    <td><input type="text" class="form-control form-control-sm" name="username" id="username" value="<%= locals.username %>" placeholder="輸入用戶名稱" required></td>
                 </tr>
                 <tr>
                     <th><label for="password" class="form-label">用戶密碼: </label></th>
-                    <td><input type="password" class="form-control" name="password" value="<%= locals.password %>" placeholder="輸入用戶密碼" required></td>
+                    <td><input type="password" class="form-control form-control-sm" name="password" value="<%= locals.password %>" placeholder="輸入用戶密碼" required></td>
                 </tr>
                 <tr>
                     <th><label for="password2" class="form-label">確認密碼: </label></th>
-                    <td><input type="password" class="form-control" name="password2" value="<%= locals.password2 %>" placeholder="輸入確認密碼" required></td>
+                    <td><input type="password" class="form-control form-control-sm" name="password2" value="<%= locals.password2 %>" placeholder="輸入確認密碼" required></td>
                 </tr>
     
                 <tr>
                     <th><label for="tunamec" class="form-label">中文姓名: </label></th>
-                    <td><input type="text" class="form-control" name="tunamec" value="<%= locals.tunamec %>" placeholder="輸入中文名稱"></td>
+                    <td><input type="text" class="form-control form-control-sm" name="tunamec" value="<%= locals.tunamec %>" placeholder="輸入中文名稱"></td>
                 </tr>
                 <tr>
                     <th><label for="tunamep" class="form-label">葡文姓名: </label></th>
-                    <td><input type="text" class="form-control" name="tunamep" value="<%= locals.tunamep %>" placeholder="輸入葡文名稱"></td>
+                    <td><input type="text" class="form-control form-control-sm" name="tunamep" value="<%= locals.tunamep %>" placeholder="輸入葡文名稱"></td>
                 </tr>
                 <tr>
                     <td>
