--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,13 @@
 <h3>
-    Hello, <%= locals.taname.charAt(0).toUpperCase() + locals.taname.slice(1)%>    
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                Hello, <%= locals.taname.charAt(0).toUpperCase() + locals.taname.slice(1)%>
+            </div>
+            <div class="col col-sm-auto">
+                <a class="btn btn-default" href="/user/logout" onclick="return confirm('Are you sure?')">登出</a>                
+            </div>
+        </div>
+    </div>
 </h3>
-    <a href="/user/logout" onclick="return confirm('Are you sure?')">登出</a>
+    
