--- a/views/task/index.ejs
+++ b/views/task/index.ejs
@@ -9,11 +9,11 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles.css">
 </head>
-<body>   
-    <div class="container container-md">
-        <%- include('../partials/header.ejs'); %>
-
-        <%- include('create_edit.ejs'); %>
+<body>       
+    <%- include('../partials/header.ejs'); %>
+    <%- include('create_edit.ejs'); %>
+    
+    <div class="container">
         <hr>
         <h3><a href="/task">所有工作</a></h3>   
         
