signup buttons fix

--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -36,10 +36,8 @@
                     <td><input type="text" class="form-control form-control-sm" name="tunamep" value="<%= locals.tunamep %>" placeholder="輸入葡文名稱"></td>
                 </tr>
                 <tr>
-                    <td>
+                    <td colspan="2">
                         <button type="submit" class="btn btn-primary">Go</button>
-                    </td>
-                    <td>
                         <button onclick="history.back()"  class="btn btn-secondary">Back</button>
                     </td>
                 </tr>
