--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -10,36 +10,36 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <div class="container">
-        <h3>登入</h3>
+    <div class="mx-auto" style="width: 320px;">
+        <h3 style="text-align: center;">登入</h3>
         <form action="/user/login" method="post">
-            <table class="table table-borderless table-sm">
-                <tr>
-                    <th><label for="username" class="form-label">用戶名稱: </label></th>
-                    <td><input type="text" class="form-control form-control-sm" name="username" id="username" value="<%= locals.username %>" placeholder="輸入用戶名稱" required></td>
-                </tr>
-                <tr>
-                    <th><label for="password"  class="form-label">用戶密碼: </label></th>
-                    <td><input type="password"  class="form-control form-control-sm" name="password" value="<%= locals.password %>" placeholder="輸入用戶密碼" required></td>
-                </tr>
-                <tr>
-                    <td colspan="2">
-                         沒有戶口? 請先 <a href="/user/signup">登記</a>
-                    </td>                
-                </tr>
-                <tr>
-                    <td colspan="2">
-                        <button type="submit" class="btn btn-primary">Go</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2">
-                        <%= locals.message %>
-                    </td>
-                </tr>
-            </table>
-        </form>
+            <div class="input-group input-group-sm mt-4 mb-2">
+                <label for="username" class="form-label me-2">用戶名稱</label>
+                <input type="text" class="form-control" name="username" id="username" value="<%= locals.username %>" placeholder="輸入用戶名稱" required>
+            </div>
+            
+            <div class="input-group input-group-sm mb-5">
+                <label for="password" class="form-label me-2">用戶密碼 </label>
+                <input type="password" class="form-control" name="password" value="<%= locals.password %>" placeholder="輸入用戶密碼" required>
+            </div>    
+       
+            <div class="input-group input-group-sm mb-2">
+                <span>沒有戶口? 請先 <a href="/user/signup">登記</a></span>
+            </div>
 
+            <div class="card">
+                <button type="submit" class="btn btn-primary">Go</button>
+            </div>
+
+            <% if (locals.message) { %>
+                <div class="alert alert-danger" role="alert">
+                    <%= locals.message %>
+                </div>            
+            <% } %>
+        </form>
+      </div>
+    
+    <div class="container">
         <%- include('../partials/footer.ejs'); %>
     </div>
 
