--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -12,15 +12,18 @@
 <body>
     <div class="mx-auto" style="width: 320px;">
         <h3 style="text-align: center;">登入</h3>
-        <form action="/user/login" method="post">
+
+        <form action="/user/login" method="post" novalidate>
             <div class="input-group input-group-sm mt-4 mb-2">
                 <label for="username" class="form-label me-2">用戶名稱</label>
                 <input type="text" class="form-control" name="username" id="username" value="<%= locals.username %>" placeholder="輸入用戶名稱" required>
+                <div class="invalid-feedback">Username is missing.</div>
             </div>
             
             <div class="input-group input-group-sm mb-5">
                 <label for="password" class="form-label me-2">用戶密碼 </label>
                 <input type="password" class="form-control" name="password" value="<%= locals.password %>" placeholder="輸入用戶密碼" required>
+                <div class="invalid-feedback">Password is missing.</div>
             </div>    
        
             <div class="input-group input-group-sm mb-2">
@@ -45,6 +48,14 @@
 
     <script>
         document.getElementById("username").focus();
+
+        const form = document.querySelector("form")
+        form.addEventListener("submit", e => {
+            if (!form.checkValidity()) {
+                e.preventDefault()
+            }
+            form.classList.add('was-validated')
+        })
     </script>
 </body>
 </html>
