--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
                 Hello, <%= locals.taname.charAt(0).toUpperCase() + locals.taname.slice(1)%>
             </div>
             <div class="col col-sm-auto">
-                <a class="btn btn-default" href="/user/logout" onclick="return confirm('Are you sure?')">登出</a>                
+                <a class="btn btn-default btn-sm" href="/user/logout" onclick="return confirm('Are you sure?')">登出</a>                
             </div>
         </div>
     </div>
