--- a/views/task/create_edit.ejs
+++ b/views/task/create_edit.ejs
@@ -35,8 +35,8 @@
             </tr>
             <tr>
                 <td colspan="2">
-                    <button class="btn btn-primary"><% if (locals.id) { %>更新<% } else { %>建立<% } %></button>
-                    <input type="reset" value="重設" class="btn btn-secondary">
+                    <button class="btn btn-primary btn-sm"><% if (locals.id) { %>更新<% } else { %>建立<% } %></button>
+                    <input type="reset" value="重設" class="btn btn-secondary btn-sm">
                 </td>
             </tr>
         </table>        
