--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -37,8 +37,8 @@
                 </tr>
                 <tr>
                     <td colspan="2">
-                        <button type="submit" class="btn btn-primary">Go</button>
-                        <button onclick="history.back()"  class="btn btn-secondary">Back</button>
+                        <button type="submit" class="btn btn-primary btn-sm">Go</button>
+                        <button onclick="history.back()"  class="btn btn-secondary btn-sm">Back</button>
                     </td>
                 </tr>
                 <tr>
