--- a/public/styles.css
+++ b/public/styles.css
@@ -49,3 +49,20 @@ body::before {
     content: "XXL";
   }
 }
+
+/*
+   Change header background color of modal of twitter bootstrap
+   https://stackoverflow.com/questions/19262113/change-header-background-color-of-modal-of-twitter-bootstrap
+*/
+
+.modal-header {
+  padding:9px 15px;
+  border-bottom:1px solid #eee;
+  background-color: #0480be;
+  -webkit-border-top-left-radius: 5px;
+  -webkit-border-top-right-radius: 5px;
+  -moz-border-radius-topleft: 5px;
+  -moz-border-radius-topright: 5px;
+   border-top-left-radius: 5px;
+   border-top-right-radius: 5px;
+}
