--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,10 +4,49 @@
             <div class="col">
                 Hello, <%= locals.taname.charAt(0).toUpperCase() + locals.taname.slice(1)%>
             </div>
-            <div class="col col-sm-auto">
+
+            <!-- <div class="col col-sm-auto">
                 <a class="btn btn-default btn-sm" href="/user/logout" onclick="return confirm('Are you sure?')">登出</a>                
+            </div> -->
+            <!-- <div class="col col-sm-auto">
+                <button class="btn btn-default btn-sm" onclick="submirForm()">登出</button>
+            </div> -->
+            <div class="col col-sm-auto">
+                <!-- Button trigger modal -->
+                <button class="btn btn-default btn-sm" data-bs-toggle="modal" data-bs-target="#staticBackdrop">登出</button>
             </div>
         </div>
     </div>
 </h3>
-    
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="staticBackdropLabel">Confirm</h5>
+          <button type="button" id="btn-close" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            登出 <%= locals.taname.charAt(0).toUpperCase() + locals.taname.slice(1)%> ?
+        </div>
+        <div class="modal-footer">
+            <button type="button" id="btn-ok" class="btn btn-primary" data-bs-dismiss="modal">Ok</button>
+            <button type="button" id="btn-cancel" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+    </div>
+</div>
+
+<form action="/user/logout" method="get">
+</form>
+
+<script>
+      const btnOk = document.getElementById('btn-ok')
+      
+      btnOk.addEventListener('click', event => {
+        document.querySelector("form").submit();
+      })
+</script>
+
+
