show number of tasks

--- a/views/task/index.ejs
+++ b/views/task/index.ejs
@@ -15,7 +15,7 @@
     
     <div class="container">
         <hr>
-        <h3><a href="/task">所有工作</a></h3>   
+        <h3><a href="/task">所有工作 (<%= tasks.length %>)</a></h3>
         
         <% if (locals.tasks.length > 0 ) { %>  
             <table class="table table-bordered table-striped table-sm">
